@@ -69,7 +69,13 @@ const char kCCProgressTextureCoords = 0x4b;
 
 -(id)init
 {
-	if( (self=[super init]) ) {
+	return [self initWithSprite:nil];
+}
+
+-(id)initWithSprite:(CCSprite*) sprite
+{
+	if(( self = [super init] )){
+		
 		percentage_ = 0.f;
 		vertexData_ = NULL;
 		vertexDataCount_ = 0;
@@ -78,13 +84,7 @@ const char kCCProgressTextureCoords = 0x4b;
 		self.reverseDirection = NO;
 		self.midpoint = ccp(.5f, .5f);
 		self.barChangeRate = ccp(1,1);
-  }
-  return self;
-}
 
--(id)initWithSprite:(CCSprite*) sprite
-{
-	if(( self = [self init] )){
 		self.sprite = sprite;
     
 		// shader program
